1. Added iOS and Android platforms 2. Added logic to handle mobile platforms

--- a/simple-todos-angular.html
+++ b/simple-todos-angular.html
@@ -3,8 +3,7 @@
   <!-- with Angular -->
 </head>
 
-<body ng-app="simple-todos"
-      ng-include="'todos-list.ng.html'"
+<body ng-include="'todos-list.ng.html'"
       ng-controller="TodosListCtrl">
 </body>
 
